--- a/static/index.html
+++ b/static/index.html
@@ -123,6 +123,15 @@
                     });
                 });
             }
+
+            function startStream() {
+                const camera = document.getElementById('camera').value;
+                const fps = document.getElementById('fps').value;
+                const blur = document.getElementById('blur').value;
+                const background = document.getElementById('background').value;
+
+                fetch(`/start?source=${camera}&fps=${fps}&blur=${blur}&background=${background}`)
+            }
         </script>
         
     </body>
