--- a/static/index.html
+++ b/static/index.html
@@ -132,7 +132,13 @@
 
                 fetch(`/start?source=${camera}&fps=${fps}&blur=${blur}&background=${background}`)
             }
+            function stopStream() {
+                fetch('/stop')
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById('status').innerHTML = data.message;
+                });
+            }
         </script>
-        
     </body>
 </html>
